@@ -1,25 +1,0 @@
-# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
-
-language: c
-
-sudo: required
-
-dist: xenial
-
-before_install:
-  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
-  - ./run.sh bootstrap
-
-install:
-  - ./run.sh install_aptget r-cran-htmltools r-cran-knitr r-cran-rmarkdown r-cran-ggplot2
-
-script:
-  - ./run.sh run_tests
-
-after_failure:
-  - ./run.sh dump_logs
-
-notifications:
-  email:
-    on_success: change
-    on_failure: change
