@@ -1,3 +1,7 @@
+2022-01-09  Dirk Eddelbuettel  <edd@debian.org>
+
+	* README.md: Remove unused continuous integration artifact and badge
+
 2021-09-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Add link to sidenotes overview
